# 2024-2025-project-3-quickest-path-team-7

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  typography_report.yml
.github/PULL_REQUEST_TEMPLATE/: merge_pull_request.yml
.github/workflows/: ci.yml  ct.yml
Document/Functional/: FunctionalSpecifications.md
Document/Management/: ManagementArtifacts.md  ProjectCharter.md
Document/Management/Weekly/: Cumulative.md  Week1.md  Week2.md  Week3.md  Week4.md  Week5.md
Document/QA/: TestCases.md  TestStrategy.md
Document/Technical/: TechnicalSpecifications.md
code/: dijkstra.hpp  graph.hpp  header.hpp  hello_world.cpp  input.hpp  macLinuxPerformanceTester.sh  macLinuxProjectBuilder.sh  outputs.hpp  path_finder.cpp  time.hpp  unit_tests.cpp  windowsPerformanceTester.bat  windowsProjectBuilder.bat
code/benchmark_sampling/: tester.py
code/dijkstra/: dijkstra.hpp  graph.hpp  header.hpp  input.hpp  main  outputs.hpp  path_finder.cpp
code/front/: index.html  main.js  style.css  user-manual.html
code/integrity_checker/: USA-roads.csv  bfs.hpp  checker.cpp  connectivityChecker.hpp  connectivityCheckerDAG.hpp  dag.hpp  graph.hpp  header.hpp  outputs.hpp  test.csv
code/own_algorithm/: USA.csv  algorithms.hpp  api.hpp  api_handling.hpp  api_responses.hpp  globals.hpp  graph.hpp  header.hpp  input.hpp  landmarks.hpp  main  main.cpp  output.hpp  scanner.hpp  shortest-path.csv  time.hpp
code/path_finder/: main.cpp  windowsProjectBuilder.bat
front/: index.html  main.js  style.css
(+24 files in other folders)
